# SliderSolver

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  test.yml
src/slider_solver/: __init__.py  solver.py
tests/: __init__.py  test_solver.py
